[project]
name = "webhook-service"
version = "0.1.0"
description = ""
packages = [{ include = "app", from = "src" }] 
authors = [
    {name = "Akshat Kumar",email = "akshatkumar10203@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "sqlalchemy (>=2.0,<3.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "alembic (>=1.13,<2.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "celery[redis] (>=5.3,<6.0)",
    "httpx (>=0.27,<1.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
watchdog = "^6.0.0"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
httpx = "^0.28.1"

